--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <header class="top_line">
         <div class="container">
             <nav class="navigation">
                 <a class="navigation_link_logo" href="./index.html">Web<span class="navigation_text">Studio</span></a>
@@ -28,7 +28,6 @@
                 </ul>                     
             </address>
         </div>
-        
     </header>
     <main>
         <section class="solutions">
