correction of the first two sections and the basement

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </section>
         <section class="plan">
             <div class="container">
-                <h2 hidden="">training plan</h2>
+                <h2 class="visually-hidden">training plan</h2>
                 <ul class="plan_menu">
                     <li class="plan_item">
                         <h3 class="plan_title">Strategy</h3>
