correction of the third section

--- a/index.html
+++ b/index.html
@@ -64,25 +64,33 @@
             <div class="container">
                 <h2 class="team_titl">Our Team</h2>
                 <ul class="team_menu">
-                    <li class="tiam_item">                    
+                    <li class="team_item">                    
                             <img class="team_img" src="./images/Our_Team/Mark.jpg" alt="Mark" width="264" height="260">
-                            <h3 class="team_subtitle">Mark Guerrero</h3>
-                            <p class="team_text">Product Designer</p>
+                            <div class="team_blok">
+                                <h3 class="team_subtitle">Mark Guerrero</h3>
+                                <p class="team_text">Product Designer</p>
+                        </div>
                     </li>
-                    <li class="tiam_item">
+                    <li class="team_item">
                             <img class="team_img" src="./images/Our_Team/Tom.jpg" alt="Tom" width="264" height="260">
-                            <h3 class="team_subtitle">Tom Ford</h3>
-                            <p class="team_text">Frontend Developer</p>
+                            <div class="team_blok">
+                                <h3 class="team_subtitle">Tom Ford</h3>
+                                <p class="team_text">Frontend Developer</p>
+                        </div> 
                     </li>
-                    <li class="tiam_item">
+                    <li class="team_item">
                             <img class="team_img" src="./images/Our_Team/Camila.jpg" alt="Camila" width="264" height="260">
-                            <h3 class="team_subtitle">Camila Garcia</h3>
-                            <p class="team_text">Marketing</p>
+                            <div class="team_blok">  
+                                <h3 class="team_subtitle">Camila Garcia</h3>
+                                <p class="team_text">Marketing</p>
+                        </div>        
                     </li>
-                    <li class="tiam_item">
+                    <li class="team_item">
                             <img class="team_img" src="./images/Our_Team/Daniel.jpg" alt="Daniel" width="264" height="260">
-                            <h3 class="team_subtitle">Daniel Wilson</h3>
-                            <p class="team_text">UI Designer</p>
+                            <div class="team_blok">     
+                                <h3 class="team_subtitle">Daniel Wilson</h3>
+                                <p class="team_text">UI Designer</p>
+                        </div>           
                     </li>
                 </ul>    
             </div>
