--- a/index.html
+++ b/index.html
@@ -101,33 +101,45 @@
             <ul class="portfolio_menu">
                 <li class="portfolio_item">
                     <img class="portfolio_img" src="./images/Our_Portfolio/Banking_App.jpg" alt="Banking_App" width="360" height="300">
-                    <h3 class="portfolio_subtitle">Banking App</h3>
-                    <p class="portfolio_text">App</p>
+                    <div class="portfolio_blok">
+                        <h3 class="portfolio_subtitle">Banking App</h3>
+                        <p class="portfolio_text">App</p>
+                    </div>
                 </li>
                 <li class="portfolio_item">
                     <img class="portfolio_img" src="./images/Our_Portfolio/Cashless_Payment.jpg" alt="Cashless_Payment" width="360" height="300">
-                    <h3 class="portfolio_subtitle">Cashless Payment</h3>
-                    <p class="portfolio_text">Marketing</p>
+                    <div class="portfolio_blok">
+                        <h3 class="portfolio_subtitle">Cashless Payment</h3>
+                        <p class="portfolio_text">Marketing</p>
+                    </div>
                 </li>
                 <li class="portfolio_item">
                     <img class="portfolio_img" src="./images/Our_Portfolio/Meditaion_App.jpg" alt="Meditaion_App" width="360" height="300">
-                    <h3 class="portfolio_subtitle">Meditation App</h3>
-                    <p class="portfolio_text">App</p>
+                    <div class="portfolio_blok">
+                        <h3 class="portfolio_subtitle">Meditation App</h3>
+                        <p class="portfolio_text">App</p>   
+                    </div>
                 </li>
                 <li class="portfolio_item">
                     <img class="portfolio_img" src="./images/Our_Portfolio/Taxi_Service.jpg" alt="Taxi_Service" width="360" height="300">
-                    <h3 class="portfolio_subtitle">Taxi Service</h3>
-                    <p class="portfolio_text">Marketing</p>
+                    <div class="portfolio_blok">
+                        <h3 class="portfolio_subtitle">Taxi Service</h3>
+                        <p class="portfolio_text">Marketing</p>
+                    </div>
                 </li>
                 <li class="portfolio_item">
                     <img class="portfolio_img" src="./images/Our_Portfolio/Screen_Illustrations.jpg" alt="Screen_Illustrations" width="360" height="300">
-                    <h3 class="portfolio_subtitle">Screen Illustrations</h3>
-                    <p class="portfolio_text">Design</p>
+                    <div class="portfolio_blok">
+                        <h3 class="portfolio_subtitle">Screen Illustrations</h3>
+                        <p class="portfolio_text">Design</p>
+                    </div>
                 </li>
                 <li class="portfolio_item">
                     <img class="portfolio_img" src="./images/Our_Portfolio/Online_Courses.jpg" alt="Online_Courses" width="360" height="300">
-                    <h3 class="portfolio_subtitle">Online Courses</h3>
-                    <p class="portfolio_text">Marketing</p>
+                    <div class="portfolio_blok">
+                        <h3 class="portfolio_subtitle">Online Courses</h3>
+                        <p class="portfolio_text">Marketing</p>
+                    </div>
                 </li>
             </ul>
             </div>
